# todoapp

./: .gitignore  pyproject.toml
Environment/: admin.py  apps.py  models.py  urls.py  views.py
Environment/migrations/: 0001_initial.py  0002_user_theme.py  0003_remove_task_coworkers_remove_task_creator_and_more.py  0004_alter_user_friends.py  0005_alter_project_coworkers.py  0006_alter_project_coworkers.py  0007_alter_project_coworkers.py  0008_alter_user_photo.py  0009_notification.py  0010_user_confirmation_code_user_email_confirmed_and_more.py
config/: .env.example
server/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: login.css  normalize.css  password-reset.css  register.css  user-verification.css  workspace-base.css  workspace-black.css  workspace-white.css
static/js/: base.mjs  login.js  register.js  workspace.js
templates/environment/user/: login.html  password-change.html  password-reset-confirmation.html  password-reset.html  register.html  user-verification.html  workspace.html
