[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "Application that represents todo list."
authors = ["Pavel <urrisend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "^10.2.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
brotli = "^1.1.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
